docs-archive/apache-airflow-providers-google/22.7.0/_sources/_api/airflow/providers/google/cloud/operators/looker/index.rst.txt
airflow.providers.google.cloud.operators.looker
===============================================

.. py:module:: airflow.providers.google.cloud.operators.looker

.. autoapi-nested-parse::

   This module contains Google Cloud Looker operators and Data Studio aliases.



Attributes
----------

.. autoapisummary::

   airflow.providers.google.cloud.operators.looker.DataStudioStartPdtBuildOperator


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.operators.looker.LookerStartPdtBuildOperator


Module Contents
---------------

.. py:class:: LookerStartPdtBuildOperator(looker_conn_id, model, view, query_params = None, asynchronous = False, cancel_on_kill = True, wait_time = 10, wait_timeout = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Submits a PDT materialization job to Looker.

   :param looker_conn_id: Required. The connection ID to use connecting to Looker.
   :param model: Required. The model of the PDT to start building.
   :param view: Required. The view of the PDT to start building.
   :param query_params: Optional. Additional materialization parameters.
   :param asynchronous: Optional. Flag indicating whether to wait for the job
       to finish or return immediately.
       This is useful for submitting long running jobs and
       waiting on them asynchronously using the LookerCheckPdtBuildSensor
   :param cancel_on_kill: Optional. Flag which indicates whether cancel the
       hook's job or not, when on_kill is called.
   :param wait_time: Optional. Number of seconds between checks for job to be
       ready. Used only if ``asynchronous`` is False.
   :param wait_timeout: Optional. How many seconds wait for job to be ready.
       Used only if ``asynchronous`` is False.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('looker_conn_id',)



   .. py:attribute:: model


   .. py:attribute:: view


   .. py:attribute:: query_params
      :value: None



   .. py:attribute:: looker_conn_id


   .. py:attribute:: asynchronous
      :value: False



   .. py:attribute:: cancel_on_kill
      :value: True



   .. py:attribute:: wait_time
      :value: 10



   .. py:attribute:: wait_timeout
      :value: None



   .. py:attribute:: hook
      :type:  airflow.providers.google.cloud.hooks.looker.LookerHook | None
      :value: None



   .. py:attribute:: materialization_id
      :type:  str | None
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: on_kill()

      Override this method to clean up subprocesses when a task instance gets killed.

      Any use of the threading, subprocess or multiprocessing module within an
      operator needs to be cleaned up, or it will leave ghost processes behind.



.. py:type:: DataStudioStartPdtBuildOperator
   :canonical: LookerStartPdtBuildOperator


